--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "repository": "git@github.com:epaew/experiment-prisma2.git",
   "author": "epaew <epaew.333@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@prisma/cli": "2.15.0",
+    "@prisma/client": "2.15.0",
+    "@types/node": "^14.14.22",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
